enroll-user/enroll-user.yml
apiVersion: apps/v1
kind: Deployment 
metadata:
    labels:
        k8s-app: enroll-user
    name: enroll-user
    namespace: enroll-user
spec:
    replicas: 1
    selector:
      matchLabels:
        k8s-app: enroll-user
    template:
        metadata:
            labels:
                k8s-app: enroll-user
        spec:
            containers:
            - image: quay.io/dhtech/enroll-user
              imagePullPolicy: Always
              name: enroll-user
            - image: quay.io/dhtech/dhauth
              imagePullPolicy: Always
              name: dhauth
            restartPolicy: Always
